--- a/.github/workflows/wipac-cicd.yml
+++ b/.github/workflows/wipac-cicd.yml
@@ -41,7 +41,7 @@ jobs:
   writable-branch-detect:
     runs-on: ubuntu-latest
     outputs:
-      OKAY_BRANCH: ${{ steps.detect.outputs.OKAY_BRANCH }}
+      OKAY: ${{ steps.detect.outputs.OKAY }}
     steps:
       - name: is this a non-dependabot branch?
         id: detect
@@ -53,10 +53,10 @@ jobs:
               ${{github.ref_type}} == 'branch' && \
               ${{format('refs/heads/{0}', github.event.repository.default_branch)}} != ${{github.ref}} \
           ]]; then
-            echo "OKAY_BRANCH=true" >> "$GITHUB_OUTPUT"
+            echo "OKAY=true" >> "$GITHUB_OUTPUT"
             echo "yes, this branch is compatible"
           else
-            echo "OKAY_BRANCH=false" >> "$GITHUB_OUTPUT"
+            echo "OKAY=false" >> "$GITHUB_OUTPUT"
             echo "no, this branch is incompatible"
           fi
 
@@ -64,11 +64,11 @@ jobs:
     needs: [writable-branch-detect]
     runs-on: ubuntu-latest
     steps:
-      - if: needs.writable-branch-detect.outputs.OKAY_BRANCH == 'true'
+      - if: needs.writable-branch-detect.outputs.OKAY == 'true'
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      - if: needs.writable-branch-detect.outputs.OKAY_BRANCH == 'true'
+      - if: needs.writable-branch-detect.outputs.OKAY == 'true'
         uses: WIPACrepo/wipac-dev-py-setup-action@v3.1
         with:
           base-keywords: WIPAC IceCube
@@ -77,11 +77,11 @@ jobs:
     needs: [writable-branch-detect]
     runs-on: ubuntu-latest
     steps:
-      - if: needs.writable-branch-detect.outputs.OKAY_BRANCH == 'true'
+      - if: needs.writable-branch-detect.outputs.OKAY == 'true'
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      - if: needs.writable-branch-detect.outputs.OKAY_BRANCH == 'true'
+      - if: needs.writable-branch-detect.outputs.OKAY == 'true'
         uses: WIPACrepo/wipac-dev-py-dependencies-action@v1.1
 
   ######################################################################################
